@@ -1,6 +1,7 @@
 2009-06-22  Oliver Hader  <oliver@typo3.org>
 
 	* Fixed bug: Information whether page is marked dirty is missing in info module
+	* Added feature: Integrate possibility to remove all expired pages in the info module
 
 2009-06-12  Oliver Hader  <oliver@typo3.org>
 
